<resources>
    <string name="app_name">NavBar</string>
    <string name="Beranda">Beranda</string>
    <string name="Ibu">Ibu</string>
    <string name="Anak">Anak</string>
    <string name="Artikel">Artikel</string>
    <string name="Pengguna">Pengguna</string>
    <string name="title_activity_pengguna">PenggunaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_ibu">IbuActivity</string>
    <string name="title_activity_anak">AnakActivity</string>
    <string name="title_activity_artikel">ArtikelActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>