<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#f4f4f4">

    <item
        android:id="@+id/fragmentBeranda"
        android:icon="@drawable/ic_beranda"
        android:title="@string/Beranda"
        app:cnb_iconColor="@color/main" />
    <item
        android:id="@+id/fragmentIbu"
        android:icon="@drawable/ic_ibu"
        android:title="@string/Ibu"
        app:cnb_iconColor="@color/main" />
    <item
        android:id="@+id/fragmentAnak"
        android:icon="@drawable/ic_anak"
        android:title="@string/Anak"
        app:cnb_iconColor="@color/main" />
    <item
        android:id="@+id/fragmentArtikel"
        android:icon="@drawable/ic_artikel"
        android:title="@string/Artikel"
        app:cnb_iconColor="@color/main" />
    <item
        android:id="@+id/fragmentPengguna"
        android:icon="@drawable/ic_pengguna"
        android:title="@string/Pengguna"
        app:cnb_iconColor="@color/main" />

</menu>